[package]
name = "anode-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
opt-level = 3

[profile.release]
debug = 1

[dependencies]

# let's not reimplement integer parsing
atoi = "1.0.0"

# error tracking is cool
thiserror = "1.0.35"

# i like loggers, i hate lagers
log = "0.4.17"
env_logger = "0.9.1"

# starting this out async
# - enable "full" to get all the things, TODO slim this down later!
# - enable "tracing" to support use of tokio-console
tokio = { version = "1.21.1", features = ["full", "tracing"] }

# emit events to use with tokio-console
console-subscriber = "0.1.8"

# handy for reading contiguous streams of... bytes.
bytes = "1.2.1"

# serializing and deserializing is really useful
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

criterion = "0.4.0"

[[bench]]
name = "kv_benchmark"
harness = false
